# SwarmToolset

./: .gitmodules  CMakeLists.txt
cache/: CMakeLists.txt  make_cache.cpp
dev/: CMakeLists.txt  extract_cache.cpp  scan_scripts.cpp  validate_patched_cache.cpp  validate_scripts.cpp  virtual_slak.cpp
include/: material.hpp  model.hpp  script.hpp  slakfile.hpp  stcache.hpp  stcache_internal.hpp  terrain.hpp
include/script/: ai_action.hpp  ai_base.hpp  ai_bugs.hpp  ai_human.hpp  ai_objects.hpp  ai_util.hpp  ai_veapon.hpp  ai_vehicles.hpp  chat.hpp  collidable.hpp  core.hpp  enum_share.hpp  game.hpp  material.hpp  object.hpp  objective.hpp  particle.hpp  particle_def.hpp  shader.hpp  sound.hpp  tuning.hpp  world.hpp  world_base.hpp
include/script/quicksave/: ai_base.hpp  ai_bugs.hpp  ai_human.hpp  ai_objects.hpp  ai_util.hpp  ai_vehicle.hpp  ai_weapon.hpp  objective.hpp  particle.hpp  world.hpp  world_base.hpp
launcher/: CMakeLists.txt  library.cpp
material/: CMakeLists.txt  dump_materials.cpp  fixup_materials.cpp
model/: CMakeLists.txt  sbm_to_gltf.cpp
save/: CMakeLists.txt  extract_save.cpp
slack/: CMakeLists.txt  create_slak.cpp  extract_slak.cpp
src/: material.cpp  model.cpp  script.cpp  script_reflect0.cpp  script_reflect1.cpp  script_reflect2.cpp  stcache.cpp  terrain.cpp
terrain/: CMakeLists.txt  dump_signature.cpp  sbt_to_gltf.cpp
